Bugzilla bug #36818: fixed bugs in PR_WaitCondVar, PR_NotifyAllCondVar, and PR_Interrupt.  Thanks to justin morey <justin@68k.org> for the bug report and the patch. Modified files: btcvar.c, btthread.c